[package]
name = "nodedb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Distributed hybrid database for multi-modal AI and agentic workloads"

[[bin]]
name = "nodedb"
path = "src/main.rs"

[lib]
name = "nodedb"
path = "src/lib.rs"

[dependencies]
# Internal foundation crates
nodedb-bridge = { workspace = true }
nodedb-wal = { workspace = true }
nodedb-mem = { workspace = true }
nodedb-crdt = { workspace = true }

# Async runtime (Control Plane)
tokio = { workspace = true }

# Error handling & diagnostics
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization & config
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
roaring = { workspace = true }
numr = { workspace = true }
nexar = { workspace = true }

# CRDTs (needed for LoroValue in engine layer)
loro = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# PostgreSQL wire protocol
pgwire = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Compression
zstd = { workspace = true }

# System calls (eventfd for TPC wake)
libc = { workspace = true }

# Query engine (Control Plane SQL/DSL planning)
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }

# Memory allocator
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
tokio-postgres = "0.7"

[features]
default = ["cpu"]
cpu = []
datafusion-mem = ["nodedb-mem/datafusion"]
cluster = []
