[package]
name = "synapsedb-bridge"
description = "Lock-free SPSC ring buffer bridging Tokio (Send) and Thread-per-Core (! Send) runtimes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
