[package]
name = "synapsedb-wal"
description = "Deterministic O_DIRECT write-ahead log with io_uring group commit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
crc32c = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
